Update README file
Updating to work within OSX environment.